feat: create landing page

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --ui-primary: var(--ui-color-primary-700);
 }
